<resources>
    <string name="app_name">Github User</string>
    <string name="avatar">Avatar</string>

    <string name="input_search">Masukkan Username</string>
    <string name="search_user">Search User</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="following">Following</string>
    <string name="follower">Followers</string>
    <string name="user_detail">User Detail</string>
    <string name="switch_dark">Switch Dark</string>

</resources>