<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.detail.UserDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username">

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/repository"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_library"
                        app:layout_constraintStart_toEndOf="@+id/tv_location"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_following"
                        app:layout_constraintEnd_toStartOf="@+id/tv_follower"
                        app:layout_constraintStart_toEndOf="@+id/tv_repository"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <TextView
                        android:id="@+id/tv_follower"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/follower"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_follower"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteY="234dp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purple_700"
        android:clickable="true"
        android:contentDescription="@string/favorites"
        android:elevation="8dp"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:src="@drawable/ic_favorite_border"
        app:fabSize="normal"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>